--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde-wasm-bindgen = "0.5"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
+leptos_router = { version = "0.4.8", features = ["csr"] }
 
 [workspace]
 members = ["src-tauri"]
