--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
 leptos_router = { version = "0.4.8", features = ["csr"] }
+console_error_panic_hook = "0.1.7"
 
 [workspace]
 members = ["src-tauri"]
