--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
 leptos_router = { version = "0.4.8", features = ["csr"] }
 console_error_panic_hook = "0.1.7"
+tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
 
 [workspace]
 members = ["src-tauri"]
